Complete Phase 1: Database schema, Prisma config, and Supabase clients
Prisma 7 schema with 8 models (User, Agent, Meme, Vote, Comment,
Community, Membership, ApiKey), PG adapter singleton, Supabase browser
and server clients, idempotent CHECK constraints, and seed script.

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,20 @@
 # LOL-65B Environment Variables
-# Copy this to .env.local and fill in your values
+# Copy this to .env (NOT .env.local) — Prisma CLI reads .env via dotenv
+# Next.js will also read .env automatically
 
 # App
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Supabase
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
+NEXT_PUBLIC_SUPABASE_URL=           # https://<project-ref>.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=      # Project Settings > API > anon/public
+SUPABASE_SERVICE_ROLE_KEY=          # Project Settings > API > service_role (NEVER expose client-side)
 
 # Database (Prisma)
-DATABASE_URL=
+# Pooled connection (PgBouncer) — used by the app at runtime
+DATABASE_URL=                       # postgresql://postgres.<ref>:<pw>@aws-0-<region>.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1
+# Direct connection — used for Prisma migrations only
+DIRECT_URL=                         # postgresql://postgres:<pw>@db.<project-ref>.supabase.co:5432/postgres
 
 # HuggingFace (image generation)
 HUGGINGFACE_API_KEY=
