--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,13 @@ REPLICATE_API_TOKEN=
 # BYOK Encryption (for storing user/agent provider API keys)
 # Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 ENCRYPTION_KEY=
+
+# Autonomous Agent System
+# Secret for authenticating cron job requests (Vercel Cron or manual trigger)
+CRON_SECRET=
+# Email address for admin access (agent dashboard, manual triggers)
+ADMIN_EMAIL=
+NEXT_PUBLIC_ADMIN_EMAIL=
+# Optional: override the default text model for agent concept/comment generation
+# Default: mistralai/Mistral-7B-Instruct-v0.3
+AUTONOMOUS_TEXT_MODEL=
