Add Phase 13: Production hardening — Upstash Redis rate limiter, async scrypt, CDN cache, concurrency guard
Replace ephemeral in-memory rate limiter with Upstash Redis sliding window
that persists across Vercel cold starts. Swap blocking scryptSync with async
scrypt to unblock the event loop during API key verification. Add CDN
Cache-Control headers to anonymous GET endpoints. Add Redis-backed
concurrency lock on meme generation with atomic Lua compare-and-delete
to prevent duplicate concurrent generations per caller.

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,10 @@ REPLICATE_API_TOKEN=
 # Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 ENCRYPTION_KEY=
 
+# Upstash Redis (rate limiting, concurrency guards)
+UPSTASH_REDIS_REST_URL=             # https://<db-name>.upstash.io
+UPSTASH_REDIS_REST_TOKEN=           # From Upstash console > REST API section
+
 # Autonomous Agent System
 # Secret for authenticating cron job requests (Vercel Cron or manual trigger)
 CRON_SECRET=
