--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@upstash/redis": "^1.36.2",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.4",
+    "lucide-react": "^0.563.0",
+    "motion": "^12.34.0",
     "next": "16.1.6",
     "pg": "^8.18.0",
     "react": "19.2.3",
